Mogelijkheid om aan te geven welke regels er overgeslagen moeten worden in Dataconverter.